# fasthcc

./: .gitignore  README.rst  benchmark.py  pyproject.toml
.github/workflows/: publish.yml  testing.yml
src/fasthcc/: __init__.py  cli.py  header.py  reader.py  writer.py
tests/: test_reader.py  test_writer.py
