[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasthcc"
version = "0.1.0"
description = "Fast reader for Telops HCC infrared camera files — reverse-engineered from the binary format, no SDK required"
license = "MIT"
requires-python = ">=3.9"
readme = "README.rst"
authors = [
    { name = "jasasonc" },
]
maintainers = [
    { name = "jasasonc" },
]
keywords = [
    "telops",
    "hcc",
    "infrared",
    "thermal",
    "camera",
    "reader",
    "numpy",
]
dependencies = [
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/ladisk/fasthcc"
source = "https://github.com/ladisk/fasthcc"

[project.scripts]
fasthcc = "fasthcc.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/fasthcc/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fasthcc"]
